--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "react-ejs-app",
+  "name": "react-ejs-app-whispers",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://github.com/GuillardPierre/react-ejs-app#readme",
-  "bugs": {
-    "url": "https://github.com/GuillardPierre/react-ejs-app/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GuillardPierre/react-ejs-app.git"
-  },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "express": "^5.1.0"
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2"
   }
 }
